# widelec

./: README.md  Zadania.md  Ściąga.md
data_generator/: cli.py  data_generator.py  osoby.json  pyproject.toml  test_data_generator.py
ml_project/: app.py  train_model.py
news_scraper/: scraper.py
weather_analysis/: environment.yml  weather_analysis.ipynb
weather_analysis/.ipynb_checkpoints/: weather_analysis-checkpoint.ipynb
weather_api/: main.py
