[project]
name = "data-generator"
version = "0.1.0"
description = ""
authors = [
    {name = "obieuz",email = "robizaj2006@gmail.com"}
]
requires-python = ">=3.12"
dependencies = [
    "faker (>=37.0.0,<38.0.0)",
    "click (>=8.1.8,<9.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"

[tool.poetry.scripts]
generate-data = "cli:generate"
